--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -24,7 +24,7 @@
         <button type="submit">Submit</button>
     </form>
 
-    <script src="/src/js/01-gallery.js" type="module"></script>
+    <script src="/src/js/03-feedback.js" type="module"></script>
 </body>
 
 </html>
